--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "install:all": "npm install && cd server && npm install"
   },
   "dependencies": {
+    "@types/react-syntax-highlighter": "^15.5.13",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "react-markdown": "^10.1.0",
+    "react-syntax-highlighter": "^16.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
