--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,8 @@
 {
   "functions": {
     "api/**/*.js": {
-      "maxDuration": 120
+      "maxDuration": 60,
+      "memory": 1024
     }
   },
   "rewrites": [
